<resources>
    <string name="app_name">YunaTube</string>
    <string name="lo">1</string>
    <string name="lang">en</string>
    <string name="action_settings">Settings</string>
    <string name="action_instagram">Go to Instagram</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_share">Share</string>
    <string name="action_add_faves">Favorite</string>
    <string name="action_remove_faves">Unfavorite</string>
    <string name="action_youtube">View on YouTube App</string>
    <string name="action_search_video">Search for videos</string>
    <string name="action_download">Download</string>
    <string name="action_write_message">Write a message</string>
    <string name="server_unavailable">Oops, something went wrong. Please try again later!</string>
    <string name="loading">Loading...</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="close">Close</string>
    <string name="send">Send</string>
    <string name="download_video">Download Video</string>
    <string name="report_video">Report Blocked Video</string>
    <string name="is_video_blocked">Is this video really blocked?</string>
    <string name="enter_content">Please leave a message</string>
    <string name="enter_longer_content">Message is too short!</string>
    <string name="message_hint">Please be considerate when leaving a message to Yuna</string>
    <string name="set_username">You have to set your username to leave a comment. Will you go to Settings page?</string>
    <string name="offline_title">You Are Offline</string>
    <string name="offline_desc">This page can be loaded once you conneced to a network</string>
    <string name="search_hint">Search Video</string>
    <string name="one_comment">1 comment</string>
    <string name="n_comments">%1$d comments</string>
    <string name="yuna_fact">Today\'s Yuna Fact</string>
    <string name="instagram">Instagram</string>
    <string name="more">More</string>
    <string name="new_videos">New Videos</string>
    <string name="share_via">Share this video via</string>
    <string name="fab_menu_web_search">Web Search</string>
    <string name="fab_menu_faves">My Favorites</string>
    <string name="fab_menu_jukebox">Jukebox</string>
    <string name="fab_menu_links">Family Sites</string>
    <string name="fab_menu_youtube">YouTube App</string>
    <string name="fab_menu_report">Report</string>
    <string name="fab_menu_share">Share</string>
    <string name="fab_menu_download">Download</string>
    <string name="fab_menu_fave">Add to Faves</string>
    <string name="fab_menu_comment">Comment</string>
    <string name="fab_menu_settings">Settings</string>
    <string name="created_second">s</string>
    <string name="created_minute">m</string>
    <string name="created_hour">h</string>
    <string name="created_day">d</string>
    <string name="created_month">mo</string>
    <string name="created_year">y</string>
    <string name="insta_feed">Yuna on Instagram</string>
    <string name="search">Search</string>
    <string name="no_search_data">No Results</string>
    <string name="settings">Settings</string>
    <string name="settings_user">User</string>
    <string name="settings_set_username">Set Username</string>
    <string name="settings_app">App Settings</string>
    <string name="settings_receive_push">Receive Push Notifications</string>
    <string name="settings_thoughts">Your Thoughts</string>
    <string name="settings_feedback">Feedback</string>
    <string name="settings_googleplay">Rate YunaTube App!</string>
    <string name="settings_message">YunaTube is dedicated to the one and only champion, Queen Yuna! \nWe ♥ Yuna from the bottom of our hearts!</string>
    <string name="settings_by">Developer: Toronto Dhole\nIllustrator: Leoniie Waffle, 2RioN\nCalligrapher: Nanalogue J</string>
    <string name="feedback_email">paul@paulshin.ca</string>
    <string name="feedback_subject">Feedback on YunaTube!</string>
    <string name="feedback_text"></string>
    <string name="feedback_chooser">Send Feedback</string>
    <string name="username_set">Set a username</string>
    <string name="username_desc">Your username will be used when you post a comment or send a message to Yuna</string>
    <string name="username_length">You can use up to 10 characters</string>
    <string name="username_successful">Your new username is successfully set</string>
    <string name="username_noname">Dhole</string>
    <string name="username_must">Please set your own username in order to continue</string>
    <string name="notification_canceled">Push notification is disabled</string>
    <string name="notification_set">Push notification is enabled</string>
    <string name="version_description">%1$s (%2$s)</string>
    <string name="video_section">Video Section</string>
    <string name="error_thumbnail_view">There was an error initializing the YouTubeThumbnailView (%1$s)</string>
    <string name="error_player">There was an error initializing the YouTubePlayer (%1$s)</string>
    <string name="youtube_add_to_my_faves">Favorite</string>
    <string name="youtube_remove_from_my_faves">Unfavorite</string>
    <string name="youtube_share_title">Share This Clip</string>
    <string name="youtube_share_subject">Have you seen this clip?</string>
    <string name="youtube_share_text">Watch this clip of Yuna! %1$s: http://youtu.be/%2$s via #YunaTube</string>
    <string name="youtube_share_via">via #YunaTube</string>
    <string name="youtube_cannot_be_added">Sorry, this clip cannot be added to My Faves.</string>
    <string name="youtube_comment">Comment</string>
    <string name="youtube_no_comments">Leave a comment.</string>
    <string name="youtube_wait">Try again after comments are loaded.</string>
    <string name="report_title">Report Unavailable Clip</string>
    <string name="report_message">Is this video blocked?</string>
    <string name="report_successful">Thanks for your report. This video will be replaced by available one shortly!</string>
    <string name="rotation">Rotation</string>
    <string name="rotation_guide">You can disable the auto-rotation by unchecking the checkbox!</string>
    <string-array name="family_sites">
        <item>Official</item>
        <item>Fan Pages</item>
        <item>F.S. Pages</item>
    </string-array>
    <string name="submenu_links_official">Official Pages</string>
    <string name="submenu_links_official_desc">Websites run by AllThatSports</string>
    <string name="submenu_links_fan">Fan Pages</string>
    <string name="submenu_links_fan_desc">Websites run by Yuna\'s fans</string>
    <string name="submenu_links_figureskating">Figure Skating Sites</string>
    <string name="submenu_links_figureskating_desc">Figure Skating sites, forums</string>
    <string name="links_official_yunakim">Official Yuna Kim Website</string>
    <string name="links_official_yunakim_url">www.yunakim.com</string>
    <string name="links_official_yunakim_desc">Yuna\'s official website managed by her agency.</string>
    <string name="links_official_yunaaaa">Yuna\'s Twitter</string>
    <string name="links_official_yunaaaa_url">www.twitter.com/yunaaaa</string>
    <string name="links_official_yunaaaa_desc">Yuna\'s personal twitter account.</string>
    <string name="links_official_facebook">Facebook Fan Page</string>
    <string name="links_official_facebook_url">www.facebook.com/pages/Yuna-Kim/53417067377</string>
    <string name="links_official_facebook_desc">Facebook Fan Page of Yuna.</string>
    <string name="links_official_youtube">Official YouTube Channel</string>
    <string name="links_official_youtube_url">www.youtube.com/yunakim</string>
    <string name="links_official_youtube_desc">Yuna\'s official youTube channel.</string>
    <string name="links_official_allthatskate">All That Skate</string>
    <string name="links_official_allthatskate_url">www.allthatskate.com</string>
    <string name="links_official_allthatskate_desc">Yuna\'s ice show website.</string>
    <string name="links_official_allthatskate_youtube">All That Skate Youtube Channel</string>
    <string name="links_official_allthatskate_youtube_url">www.youtube.com/allthatskate</string>
    <string name="links_official_allthatskate_youtube_desc">YouTube channel of All That Skate Ice show.</string>
    <string name="links_official_allthatskate_twitter">All That Skate Twitter</string>
    <string name="links_official_allthatskate_twitter_url">www.twitter.com/allthatskate</string>
    <string name="links_official_allthatskate_twitter_desc">Yuna\'s ice show information is updated live.</string>
    <string name="links_official_allthatsports">All That Sports</string>
    <string name="links_official_allthatsports_url">www.atsports.co.kr</string>
    <string name="links_official_allthatsports_desc">Yuna\'s agency, All That Sports website.</string>
    <string name="links_official_instagram_url">www.instagram.com/yunakim</string>
    <string name="links_fan_fevers">Fever Skating</string>
    <string name="links_fan_fevers_url">www.feverskating.com</string>
    <string name="links_fan_fevers_desc"></string>
    <string name="links_fan_yunacafe">Yuna Cafe</string>
    <string name="links_fan_yunacafe_url">cafe.daum.net/figureyeona</string>
    <string name="links_fan_yunacafe_desc"></string>
    <string name="links_fan_yunagall">DC Inside Yuna Gallery</string>
    <string name="links_fan_yunagall_url">m.dcinside.com/mylist.php?mygall=yeona</string>
    <string name="links_fan_yunagall_desc"></string>
    <string name="links_fan_fsgall">DC Inside Figure Skating Gallery</string>
    <string name="links_fan_fsgall_url">m.dcinside.com/mylist.php?mygall=figureskating_new</string>
    <string name="links_fan_fsgall_desc"></string>
    <string name="links_fan_fsgallbestposts">DC FS Gallery Best Posts</string>
    <string name="links_fan_fsgallbestposts_url">m.dcinside.com/mylist.php?mygall=figureskating_new&amp;recommend=1</string>
    <string name="links_fan_fsgallbestposts_desc"></string>
    <string name="links_fan_allthatyuna">All That Yuna</string>
    <string name="links_fan_allthatyuna_url">www.allthatyuna.com</string>
    <string name="links_fan_allthatyuna_desc"></string>
    <string name="links_fan_yunaforum">Yuna Forum</string>
    <string name="links_fan_yunaforum_url">www.yunaforum.com</string>
    <string name="links_fan_yunaforum_desc"></string>
    <string name="links_fan_russia">Russian Yuna Forum</string>
    <string name="links_fan_russia_url">www.yuna-kim.com</string>
    <string name="links_fan_russia_desc"></string>
    <string name="links_fan_china">Chinese Tudou Channel</string>
    <string name="links_fan_china_url">www.tudou.com/home/kimyuna</string>
    <string name="links_fan_china_desc"></string>
    <string name="links_figureskating_isu">International Skating Union</string>
    <string name="links_figureskating_isu_url">www.isu.org</string>
    <string name="links_figureskating_isu_desc">Website of the international governing body for competitive ice skating disciplines.</string>
    <string name="links_figureskating_icenetwork">Ice Network</string>
    <string name="links_figureskating_icenetwork_url">www.icenetwork.com</string>
    <string name="links_figureskating_icenetwork_desc">Figure Skating news and info site.</string>
    <string name="links_figureskating_fsu">Figure Skating Universe</string>
    <string name="links_figureskating_fsu_url">www.fsuniverse.net</string>
    <string name="links_figureskating_fsu_desc">Figure Skating Fan Forum</string>
    <string name="links_figureskating_golden">Golden Skate</string>
    <string name="links_figureskating_golden_url">www.goldenskate.com</string>
    <string name="links_figureskating_golden_desc">Figure Skating Fan Forum</string>
    <string name="no_comments">Leave the very first comment for this video!</string>
</resources>