<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_primary">

        <include layout="@layout/toolbar_actionbar_with_headerbar"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:fillViewport="true"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical">

            <TextView
                style="@style/SettingsSectionTextView"
                android:text="@string/settings_user"/>

            <RelativeLayout
                android:id="@+id/set_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    style="@style/SettingsItemTextView"
                    android:text="@string/settings_set_username"/>

                <TextView
                    android:id="@+id/username"
                    style="@style/SettingsItemTextView"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:text="username"/>
            </RelativeLayout>

            <TextView
                android:id="@+id/setting_title"
                style="@style/SettingsSectionTextView"
                android:text="@string/settings_app"/>

            <RelativeLayout
                android:id="@+id/set_push"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?selectableItemBackground"
                android:orientation="horizontal"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <TextView
                    style="@style/SettingsItemTextView"
                    android:text="@string/settings_receive_push"/>

                <CheckBox
                    android:id="@+id/push"
                    android:layout_width="wrap_content"
                    android:layout_height="46dp"
                    android:layout_alignParentBottom="true"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:gravity="center_vertical"
                    android:padding="0dp"
                    android:text=""/>
            </RelativeLayout>

            <TextView
                style="@style/SettingsSectionTextView"
                android:text="@string/settings_thoughts"/>

            <TextView
                android:id="@+id/feedback"
                style="@style/SettingsItemTextView"
                android:layout_width="match_parent"
                android:background="?selectableItemBackground"
                android:paddingLeft="15dp"
                android:text="@string/settings_feedback"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="#dddddd"/>

            <TextView
                android:id="@+id/rate"
                style="@style/SettingsItemTextView"
                android:layout_width="match_parent"
                android:background="?selectableItemBackground"
                android:paddingLeft="15dp"
                android:text="@string/settings_googleplay"/>

            <ImageView
                android:layout_width="150dp"
                android:layout_height="127dp"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/setting_image"/>

            <TextView
                android:id="@+id/version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="v 4.0.7"
                android:textColor="@color/body_text_2"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/settings_message"
                android:textColor="@color/body_text_2"
                android:textSize="14sp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="30dp"
                android:layout_marginRight="30dp"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal"
                android:text="@string/settings_by"
                android:textColor="@color/body_text_2"
                android:textSize="13sp"/>
        </LinearLayout>

    </ScrollView>
</LinearLayout>