<ca.paulshin.yunatube.widgets.FloatingActionsMenu
    android:id="@+id/main_fab"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    app:fab_addButtonColorNormal="@color/fab_video_normal_color"
    app:fab_addButtonColorPressed="@color/fab_video_pressed_color"
    app:fab_addButtonPlusIconColor="@color/fab_video_plus_color">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="downloadVideo"
            app:fab_colorNormal="@color/fab_color_orange"
            app:fab_colorPressed="@color/fab_color_pressed_orange"
            app:fab_icon="@drawable/ic_download"
            app:fab_size="mini"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_2"
            style="@style/FABDialogCardView"
            android:layout_toLeftOf="@id/fab_download"
            android:layout_toStartOf="@id/fab_download"
            app:cardCornerRadius="4dp">

            <TextView
                style="@style/FABDialogTextView"
                android:text="@string/fab_menu_download"/>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_youtube"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="150dp"
            android:onClick="watchOnYouTube"
            app:fab_colorNormal="@color/fab_color_gray"
            app:fab_colorPressed="@color/fab_color_pressed_gray"
            app:fab_icon="@drawable/ic_youtube"
            app:fab_size="mini"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_1"
            style="@style/FABDialogCardView"
            android:layout_toLeftOf="@id/fab_youtube"
            android:layout_toStartOf="@id/fab_youtube"
            app:cardCornerRadius="4dp">

            <TextView
                style="@style/FABDialogTextView"
                android:text="@string/fab_menu_youtube"/>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_comment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="comment"
            app:fab_colorNormal="@color/fab_color_pink"
            app:fab_colorPressed="@color/fab_color_pressed_pink"
            app:fab_icon="@drawable/ic_comment"
            app:fab_size="mini"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_4"
            style="@style/FABDialogCardView"
            android:layout_toLeftOf="@id/fab_comment"
            android:layout_toStartOf="@id/fab_comment"
            app:cardCornerRadius="4dp">

            <TextView
                style="@style/FABDialogTextView"
                android:text="@string/fab_menu_comment"/>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_share"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="150dp"
            android:onClick="share"
            app:fab_colorNormal="@color/fab_color_darkdark_blue"
            app:fab_colorPressed="@color/fab_color_pressed_darkdark_blue"
            app:fab_icon="@drawable/ic_share"
            app:fab_size="mini"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_3"
            style="@style/FABDialogCardView"
            android:layout_toLeftOf="@id/fab_share"
            android:layout_toStartOf="@id/fab_share"
            app:cardCornerRadius="4dp">

            <TextView
                style="@style/FABDialogTextView"
                android:text="@string/fab_menu_share"/>
        </android.support.v7.widget.CardView>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_favorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:onClick="favorite"
            app:fab_colorNormal="@color/fab_color_purple"
            app:fab_colorPressed="@color/fab_color_pressed_purple"
            app:fab_icon="@drawable/ic_favorite"
            app:fab_size="mini"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_6"
            style="@style/FABDialogCardView"
            android:layout_toLeftOf="@id/fab_favorite"
            android:layout_toStartOf="@id/fab_favorite"
            app:cardCornerRadius="4dp">

            <TextView
                android:id="@+id/favorite"
                style="@style/FABDialogTextView"
                android:text="@string/fab_menu_fave"/>
        </android.support.v7.widget.CardView>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="150dp"
            android:onClick="report"
            app:fab_colorNormal="@color/fab_color_green"
            app:fab_colorPressed="@color/fab_color_pressed_green"
            app:fab_icon="@drawable/ic_report"
            app:fab_size="mini"/>

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_5"
            style="@style/FABDialogCardView"
            android:layout_toLeftOf="@id/fab_report"
            android:layout_toStartOf="@id/fab_report"
            app:cardCornerRadius="4dp">

            <TextView
                style="@style/FABDialogTextView"
                android:text="@string/fab_menu_report"/>
        </android.support.v7.widget.CardView>
    </RelativeLayout>
</ca.paulshin.yunatube.widgets.FloatingActionsMenu>