<ca.paulshin.yunatube.widgets.FloatingActionsMenu
    android:id="@+id/main_fab"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true"
    android:layout_alignParentRight="true"
    android:layout_marginBottom="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    app:fab_addButtonColorNormal="@color/fab_main_normal_color"
    app:fab_addButtonColorPressed="@color/fab_main_pressed_color"
    app:fab_addButtonPlusIconColor="@color/fab_main_plus_color">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_3"
            style="@style/FABDialogCardView"
            app:cardCornerRadius="4dp">

            <TextView
                style="@style/FABDialogTextView"
                android:text="@string/fab_menu_jukebox"/>
        </android.support.v7.widget.CardView>

        <ca.paulshin.yunatube.widgets.FloatingActionButton
            android:id="@+id/fab_jukebox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/card_view_3"
            android:layout_toRightOf="@id/card_view_3"
            app:fab_colorNormal="@color/fab_color_purple"
            app:fab_colorPressed="@color/fab_color_pressed_purple"
            app:fab_icon="@drawable/ic_jukebox"
            app:fab_size="mini"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_4"
            style="@style/FABDialogCardView"
            app:cardCornerRadius="4dp">

            <TextView
                style="@style/FABDialogTextView"
                android:text="@string/fab_menu_links"/>
        </android.support.v7.widget.CardView>

        <ca.paulshin.yunatube.widgets.FloatingActionButton
            android:id="@+id/fab_links"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/card_view_4"
            android:layout_toRightOf="@id/card_view_4"
            app:fab_colorNormal="@color/fab_color_yellow"
            app:fab_colorPressed="@color/fab_color_pressed_yellow"
            app:fab_icon="@drawable/ic_links"
            app:fab_size="mini"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_1"
            style="@style/FABDialogCardView"
            app:cardCornerRadius="4dp">

            <TextView
                style="@style/FABDialogTextView"
                android:text="@string/fab_menu_web_search"/>
        </android.support.v7.widget.CardView>

        <ca.paulshin.yunatube.widgets.FloatingActionButton
            android:id="@+id/fab_web_search"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/card_view_1"
            android:layout_toRightOf="@id/card_view_1"
            app:fab_colorNormal="@color/fab_color_blue"
            app:fab_colorPressed="@color/fab_color_pressed_blue"
            app:fab_icon="@drawable/ic_web_search"
            app:fab_size="mini"/>
    </RelativeLayout>

    <RelativeLayout

        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <android.support.v7.widget.CardView
            android:id="@+id/card_view_5"
            style="@style/FABDialogCardView"
            app:cardCornerRadius="4dp">

            <TextView
                style="@style/FABDialogTextView"
                android:text="@string/fab_menu_settings"/>
        </android.support.v7.widget.CardView>

        <ca.paulshin.yunatube.widgets.FloatingActionButton
            android:id="@+id/fab_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@id/card_view_5"
            android:layout_toRightOf="@id/card_view_5"
            app:fab_colorNormal="@color/fab_color_darkdark_blue"
            app:fab_colorPressed="@color/fab_color_pressed_darkdark_blue"
            app:fab_icon="@drawable/ic_settings"
            app:fab_size="mini"/>
    </RelativeLayout>

</ca.paulshin.yunatube.widgets.FloatingActionsMenu>